--- a/navigator/style.css
+++ b/navigator/style.css
@@ -478,3 +478,138 @@ body {
 .chiller-theme .sidebar-footer>a:last-child {
     border-right: none;
 }
+
+/* ---------------------- */
+
+div.grid {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+div.cell {
+  box-sizing: border-box;
+  padding: 3px;
+}
+
+figure.icon {
+  font-family: 'Raleway', Arial, sans-serif;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  margin: 10px auto !important;
+  /* min-width: 230px; */
+  /* max-width: 315px; */
+  width: 100%;
+  background: #000000;
+  color: #ffffff;
+  text-align: center;
+  max-width: 100% !important;
+}
+
+figure.icon * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
+}
+
+figure.icon img {
+  opacity: 0.8;
+  width: 100%;
+  vertical-align: top;
+  -webkit-transition: opacity 0.35s;
+  transition: opacity 0.35s;
+  display: block;
+}
+
+figure.icon figcaption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+figure.icon figcaption>div {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+}
+
+figure.icon p {
+  margin: 0;
+  position: absolute;
+  left: 0;
+  padding: 5px 5px;
+  text-transform: uppercase;
+  color: #fff;
+  /* font-weight: 900; */
+  bottom: 0;
+  line-height: 24px;
+}
+
+figure.icon p::before,
+figure.icon p::after{
+  display: none !important;
+}
+
+figure.icon a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  border: none !important;
+}
+
+figure.icon a:hover {
+  background: none !important;
+}
+
+figure.icon:hover img,
+figure.icon.hover img {
+  opacity: 0.3;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+@media (min-width: 1200px) {
+	.cell {
+    -ms-flex: 0 0 10%;
+    flex: 0 0 10%;
+	}
+}
+
+/*默认*/
+@media (min-width: 980px){
+	.cell {
+    -ms-flex: 0 0 16.6666%;
+    flex: 0 0 16.6666%;
+	}
+}
+
+/* 平板电脑和小屏电脑之间的分辨率 */
+@media (min-width: 768px) and (max-width: 979px) {
+	.cell {
+    -ms-flex: 0 0 12.5%;
+    flex: 0 0 12.5%;
+	}
+}
+
+/* 横向放置的手机和竖向放置的平板之间的分辨率 */
+@media (max-width: 767px) {
+	.cell {
+    -ms-flex: 0 0 20%;
+    flex: 0 0 20%;
+	}
+}
+
+/* 横向放置的手机及分辨率更小的设备 */
+@media (max-width: 480px) {
+	.cell {
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+	}
+}
