--- a/navigator/master.css
+++ b/navigator/master.css
@@ -503,15 +503,10 @@ div.cell {
 
 figure.icon {
   font-family: 'Raleway', Arial, sans-serif;
-  color: #fff;
   position: relative;
   overflow: hidden;
   margin: 10px auto !important;
-  /* min-width: 230px; */
-  /* max-width: 315px; */
   width: 100%;
-  background: #000000;
-  color: #ffffff;
   text-align: left;
   max-width: 100% !important;
 }
@@ -524,7 +519,7 @@ figure.icon * {
 }
 
 figure.icon img {
-  opacity: 0.8;
+  opacity: 1;
   width: 100%;
   vertical-align: top;
   -webkit-transition: opacity 0.35s;
@@ -533,11 +528,8 @@ figure.icon img {
 }
 
 figure.icon figcaption {
-  position: absolute;
-  bottom: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 26px;
 }
 
 figure.icon figcaption>div {
@@ -549,19 +541,16 @@ figure.icon figcaption>div {
 
 figure.icon p {
   margin: 0;
-  position: absolute;
-  left: 0;
-  padding: 3px 3px;
+  padding: 4px 4px;
   text-transform: uppercase;
-  color: #fff;
+  color: #000;
   /* font-weight: 900; */
-  bottom: 0;
   line-height: 24px;
-  text-shadow: 1px 1px 1px #000;
+  text-shadow: 1px 1px 1px #fff;
 }
 
 figure.icon p::before,
-figure.icon p::after{
+figure.icon p::after {
   display: none !important;
 }
 
