--- a/navigator/master.css
+++ b/navigator/master.css
@@ -518,8 +518,12 @@ figure.icon * {
   transition: all 0.6s ease;
 }
 
+figure.icon div.icon-image-container {
+  background-color: #000;
+}
+
 figure.icon img {
-  opacity: 1;
+  opacity: 0.9;
   width: 100%;
   vertical-align: top;
   -webkit-transition: opacity 0.35s;
